--- a/Element.html
+++ b/Element.html
@@ -12,7 +12,7 @@
 	  <div class="sidebar">
     <ul>
         <li><a href="Element.html" class="active">我的元素</a></li>
-        <li><a href="About.html">关于我</a></li>
+        <li><a href="about.html">关于我</a></li>
         <li><a href="apples.html">我的苹果</a></li>
         <li><a href="shares.html">我的分享</a></li>
     </ul>
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="card">
         <div class="imgBx">
-          <img src="../img/IMG_20241109_184326.jpg" width="255" height="260" alt=""/> </div>
+          <img src="IMG_20241109_184326.jpg" width="255" height="260" alt=""/> </div>
         <div class="content">
           <h2>Joy Of Life</h2>
           <p>My favorite TV episode!!!</p>
@@ -28,7 +28,7 @@
       </div>
       <div class="card">
         <div class="imgBx">
-          <img src="../img/IMG_20221207_120119.jpg" width="255" height="260" alt=""/>
+          <img src="IMG_20221207_120119.jpg" width="255" height="260" alt=""/>
           </div>
         <div class="content">
           <h2>CATS AND SUNSHINE</h2>
@@ -37,7 +37,7 @@
         </div>
       <div class="card">
         <div class="imgBx">
-          <img src="../img/IMG-2024110904.jpg" width="255" height="260" alt=""/>
+          <img src="IMG-2024110904.jpg" width="255" height="260" alt=""/>
           </div>
   <div class="content">
     <h2>BOOKS AND POEMS</h2>
@@ -46,7 +46,7 @@
         </div>
       <div class="card">
         <div class="imgBx">
-          <img src="../img/xiaozhou.jpg" width="255" height="260" alt=""/>
+          <img src="xiaozhou.jpg" width="255" height="260" alt=""/>
           </div>
         <div class="content">
           <h2>Yosh</h2>
