--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 			  width:100%;
 			  height:100%;
 			  position:absolute;
-			  background:url("../img/博客背景.jpg");
+			  background:url("博客背景.jpg");
 			  background-size:cover;
 			  z-index:-1;
 			  transform:skewY(-4deg);
@@ -138,7 +138,7 @@
 </div>
 	
 	<div class="shell">
-	<img src="../img/博客头像.jpg" alt="" class="cover">
+	<img src="博客头像.jpg" alt="" class="cover">
 	<div class="head">
 		<div class="data">
 		<div class="title1">安之</div>
