--- a/apples.html
+++ b/apples.html
@@ -77,7 +77,7 @@
     <div class="sidebar">
         <ul>
             <li><a href="Element.html" class="active">我的元素</a></li>
-            <li><a href="About.html">关于我</a></li>
+            <li><a href="about.html">关于我</a></li>
             <li><a href="apples.html">我的苹果</a></li>
             <li><a href="shares.html">我的分享</a></li>
         </ul>
@@ -90,16 +90,16 @@
 
         <div class="picture-container">
     <div class="picture">
-        <img src="../img/作品1.jpg" width="300" height="380" alt=""/>
+        <img src="作品1.jpg" width="300" height="380" alt=""/>
     </div>
     <div class="picture">
-        <img src="../img/作品2.jpg" width="300" height="380" alt=""/>
+        <img src="作品2.jpg" width="300" height="380" alt=""/>
     </div>
     <div class="picture">
-        <img src="../img/作品3.jpg" width="300" height="380" alt=""/>
+        <img src="作品3.jpg" width="300" height="380" alt=""/>
     </div>
     <div class="picture">
-        <img src="../img/作品4.jpg" width="400" height="300" alt=""/>
+        <img src="作品4.jpg" width="400" height="300" alt=""/>
     </div>
 </div>
 
@@ -109,10 +109,10 @@
 
         <div class="work-container">
             <div class="work1">
-                <img src="../img/作品集1.jpg" width="100%" height="auto" alt=""/>
+                <img src="作品集1.jpg" width="100%" height="auto" alt=""/>
             </div>
             <div class="work2">
-                <img src="../img/作品集2.jpg" width="100%" height="auto" alt=""/>
+                <img src="作品集2.jpg" width="100%" height="auto" alt=""/>
             </div>
         </div>
     </div>
