--- a/shares.html
+++ b/shares.html
@@ -18,19 +18,19 @@
 
 <body>
 	<div id="cont">
-    <img src="../img/小丁猫.jpg" class="img" width="190" height="250" id="a">
-	<img src="../img/锁石.jpg" class="img" width="190" height="250" id="b">
-	<img src="../img/操场的云.jpg" class="img" width="190" height="250"  id="c">
-	<img src="../img/街角.jpg" class="img" width="190" height="250" id="d">
-	<img src="../img/孤独的小黄.jpg" class="img" width="190" height="250" id="e">
-	<img src="../img/黎黄陂路.jpg" class="img" width="190" height="250" id="f">
-	<img src="../img/泥巴.jpg" class="img" width="190" height="250" id="g">
-	<img src="../img/弟弟.jpg" class="img" width="190" height="250" id="h">
+    <img src="小丁猫.jpg" class="img" width="190" height="250" id="a">
+	<img src="锁石.jpg" class="img" width="190" height="250" id="b">
+	<img src="操场的云.jpg" class="img" width="190" height="250"  id="c">
+	<img src="街角.jpg" class="img" width="190" height="250" id="d">
+	<img src="孤独的小黄.jpg" class="img" width="190" height="250" id="e">
+	<img src="黎黄陂路.jpg" class="img" width="190" height="250" id="f">
+	<img src="泥巴.jpg" class="img" width="190" height="250" id="g">
+	<img src="弟弟.jpg" class="img" width="190" height="250" id="h">
 	</div>
 	<div class="sidebar">
 	<ul>
             <li><a href="Element.html">我的元素</a></li>
-            <li><a href="About.html">关于我</a></li>
+            <li><a href="about.html">关于我</a></li>
             <li><a href="apples.html">我的苹果</a></li>
             <li><a href="shares.html">我的分享</a></li>
         </ul>
