--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
       </div>
 		
 		<div class="pic1">
-	    <img src="../img/pic-1.jpg" width="300" height="400" alt=""/></div>
+	    <img src="pic-1.jpg" width="300" height="400" alt=""/></div>
 		
 </div>
 	  
