--- a/about.html
+++ b/about.html
@@ -134,6 +134,7 @@
         <li><a href="about.html">关于我</a></li>
         <li><a href="apples.html">我的苹果</a></li>
         <li><a href="shares.html">我的分享</a></li>
+	<li><a href="https://tianzi620.github.io/605/%E4%B8%9C%E4%B9%9D%E8%88%8D605%E5%AF%9D%E5%AE%A4%E4%B8%BB%E9%A1%B5.html">寝室主页</a></li>
     </ul>
 </div>
 	
